# rust-practice

./: Cargo.toml  README.md
assets/: bubble_sort.txt  data.txt
my-lib/src/: lib.rs
src/: account.rs  anagram.rs  animals.rs  array_combinations.rs  array_intersection.rs  avg.rs  battleship.rs  binary_search.rs  block.rs  bubble_sort.rs  buy_sell_stock.rs  cards.rs  closest_sum.rs  coin.rs  compress_string.rs  construct_string.rs  contains_duplicates.rs  count_to_10.rs  disease.rs  divider.rs  entertainment.rs  file_manip.rs  finance.rs  find_word_in_board.rs  gcd.rs  generic_largest.rs  generic_list.rs  generic_reference.rs  greater_str.rs  guessing_game.rs  has_unique_characters.rs  is_integer_palindrome.rs  is_one_distant.rs  is_prime.rs  is_prime_parallel.rs  is_string_palindrome.rs  it.rs  k_largest_in_vector.rs  linear_search.rs  main.rs  (+31 more)
