workspace = { members = ["my-lib"] }
[package]
name = "rust-studies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
tokio = { version = "1.37.0", features = ["full"] }
my-lib = { path = "my-lib/" }
num-traits = "0.2.19"
